# genisom_robot_sdk

./: CHANGELOG.md  LICENSE  README.md  README_cn.md  README_zh.md
docs/en/: sdk_callback_en.md  sdk_client_api_en.md  sdk_connection_en.md  sdk_control_ownership_en.md  sdk_state_en.md  sdk_type_en.md
docs/zh/: sdk_callback_cn.md  sdk_client_api_cn.md  sdk_client_api_zh.md  sdk_connection_cn.md  sdk_connection_zh.md  sdk_control_ownership_cn.md  sdk_control_ownership_zh.md  sdk_state_zh.md  sdk_type_cn.md  sdk_type_zh.md
example/: CMakeLists.txt  async.cpp  auto_reconnect.cpp  camera_bitrate.cpp  control.cpp  data.cpp  manual_reconnect.cpp  sync.cpp  take_control.cpp
include/robot_sdk/: sdk_callback.hpp  sdk_client.hpp  sdk_connection.hpp  sdk_export.hpp  sdk_type.hpp
lib/aarch64/: librobot_sdk.so.0.1.0  librobot_sdk.so.0.1.1
lib/x86_64/: librobot_sdk.so.0.1.0  librobot_sdk.so.0.1.1
